CI: set windows-2019 explicitly
[skip ci]

--- a/.azure-pipelines/test-win.yml
+++ b/.azure-pipelines/test-win.yml
@@ -4,7 +4,7 @@
 jobs:
   - job: win_64
     pool:
-      vmImage: windows-latest
+      vmImage: windows-2019
     timeoutInMinutes: 120
     strategy:
       maxParallel: 3
