CI: use pytest<7.1 on Windows
- https://github.com/pytest-dev/pytest/issues/9765

[skip ci]

--- a/.azure-pipelines/test-win.yml
+++ b/.azure-pipelines/test-win.yml
@@ -30,7 +30,7 @@ jobs:
         displayName: Add conda to PATH
 
       - script: |
-          conda create -n test -c ${{ parameters.CHANNEL }} -c conda-forge -y cctbx python=$(PY_VER) pytest junit-xml
+          conda create -n test -c ${{ parameters.CHANNEL }} -c conda-forge -y cctbx python=$(PY_VER) pytest=7.0 junit-xml
         displayName: Construct latest conda environment
 
       # copy extra test files
