--- a/.azure-pipelines/azure-pipelines-nightly-test.yml
+++ b/.azure-pipelines/azure-pipelines-nightly-test.yml
@@ -18,7 +18,7 @@ resources:
     trigger:
       branches:
         include:
-        - master
+        - main
 
 jobs:
   - template: ./test-linux.yml
