--- a/.azure-pipelines/azure-pipelines-feedstock-update.yml
+++ b/.azure-pipelines/azure-pipelines-feedstock-update.yml
@@ -103,6 +103,12 @@ jobs:
 
       conda smithy rerender -c auto
 
+      for f in `/bin/ls .ci_support/osx_64*python3.7*.yaml`; do
+        sed -i s/"\- '14'"/"\- '13'"/g $f
+      done
+
+      git commit -am "Switch back to version 13 of clang and clangxx for Python 3.7 on osx-64"
+
       git remote set-url origin git@github.com:cctbx/nightly-feedstock.git
 
       git push -u origin main
