Revert "CI: unpin pytest on Windows tests"
This reverts commit 78535d9e531791d930ba5934fc24b3fe0c53676b.

[skip ci]

--- a/.azure-pipelines/test-win.yml
+++ b/.azure-pipelines/test-win.yml
@@ -31,7 +31,7 @@ jobs:
 
       - script: |
           conda remove -n test -y --all
-          conda create -n test -c ${{ parameters.CHANNEL }} -c conda-forge -y cctbx python=$(PY_VER) pytest junit-xml
+          conda create -n test -c ${{ parameters.CHANNEL }} -c conda-forge -y cctbx python=$(PY_VER) pytest=7.0 junit-xml
         displayName: Construct latest conda environment
         retryCountOnTaskFailure: 3
 
