--- a/.azure-pipelines/test-linux.yml
+++ b/.azure-pipelines/test-linux.yml
@@ -16,6 +16,8 @@ jobs:
           PY_VER: 3.10
         python3.11:
           PY_VER: 3.11
+        python3.12:
+          PY_VER: 3.12
 
     steps:
     - template: ./templates/test-unix.yml
