Add schedule to run ci branch for Python 3.12 tests
[skip ci]

--- a/.azure-pipelines/azure-pipelines-nightly-test.yml
+++ b/.azure-pipelines/azure-pipelines-nightly-test.yml
@@ -4,6 +4,14 @@
 trigger: none
 pr: none
 
+# schedule run for Python 3.12
+schedules:
+  - cron: '0 8 * * *'
+    displayName: Run Python 3.12 tests
+    branches:
+      include:
+      - ci
+
 resources:
   repositories:
   - repository: cctbx_project
