CI: add nightly update for ci branch
- It seems like the schedule only works when ci and master
  are synced.

[skip ci]

--- a/.azure-pipelines/azure-pipelines-nightly-update.yml
+++ b/.azure-pipelines/azure-pipelines-nightly-update.yml
@@ -111,3 +111,12 @@ jobs:
       git push -u origin master
     displayName: Update master branch
     condition: in(variables['Agent.JobStatus'], 'Succeeded')
+
+  # bump ci only if previous step succeeds without issues
+  - script: |
+      set -xe
+      git checkout ci
+      git rebase master
+      git push -u origin ci
+    displayName: Update ci branch
+    condition: in(variables['Agent.JobStatus'], 'Succeeded')
