--- a/.azure-pipelines/azure-pipelines-nightly-update.yml
+++ b/.azure-pipelines/azure-pipelines-nightly-update.yml
@@ -117,6 +117,6 @@ jobs:
       set -xe
       git checkout ci
       git rebase master
-      git push -u origin ci
+      git push -f -u origin ci
     displayName: Update ci branch
     condition: in(variables['Agent.JobStatus'], 'Succeeded')
