CI: switch Python 3.12 tests to py312_test branch
[skip ci]

--- a/.azure-pipelines/azure-pipelines-nightly-test.yml
+++ b/.azure-pipelines/azure-pipelines-nightly-test.yml
@@ -10,7 +10,7 @@ schedules:
     displayName: Run Python 3.12 tests
     branches:
       include:
-      - ci
+      - py312_test
 
 resources:
   repositories:
