CI: clean up download-phenix-regression.py
[skip ci]

--- a/.azure-pipelines/templates/test-unix.yml
+++ b/.azure-pipelines/templates/test-unix.yml
@@ -52,7 +52,12 @@ steps:
       source activate test
       cd $(Pipeline.Workspace)
       rm -f phenix_regression.zip
-      python cctbx/.azure-pipelines/scripts/download-phenix-regression.py --organization cctbx --project cctbx_project
+      python cctbx/scripts/download-azure-artifact.py \
+        --organization cctbx \
+        --project cctbx_project \
+        --definitions 4 \
+        --artifact-name phenix_regression \
+        --local-filename phenix_regression.zip
       unzip phenix_regression.zip
       mv phenix_regression ${CONDA_PREFIX}/lib/python$(PY_VER)/site-packages
       ls ${CONDA_PREFIX}/lib/python$(PY_VER)/site-packages
