--- a/.azure-pipelines/test-win.yml
+++ b/.azure-pipelines/test-win.yml
@@ -62,7 +62,12 @@ jobs:
           call activate test
           cd $(Pipeline.Workspace)
           del phenix_regression.zip
-          python cctbx\.azure-pipelines\scripts\download-phenix-regression.py --organization cctbx --project cctbx_project
+          python cctbx/scripts/download-azure-artifact.py ^
+            --organization cctbx ^
+            --project cctbx_project ^
+            --definitions 4 ^
+            --artifact-name phenix_regression ^
+            --local-filename phenix_regression.zip
           unzip phenix_regression.zip
           mv phenix_regression %CONDA_PREFIX%\lib\site-packages
         displayName: Copy phenix_regression artifact
