--- a/.github/workflows/nightly_tests.yml
+++ b/.github/workflows/nightly_tests.yml
@@ -18,9 +18,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        channel: [conda-forge, cctbx-nightly]
+        channel: [cctbx-dev]
         os: [ubuntu-latest, macos-14, macos-13, windows-latest]
-        python_version: [3.8, 3.9, "3.10", 3.11, 3.12]
+        python_version: ["3.9"]
         # os: [windows-latest]
         # python_version: [3.9, 3.12]
 
@@ -50,7 +50,7 @@ jobs:
 
       - name: Install cctbx
         run: |
-          conda install -n test -c ${{ matrix.channel }} -y cctbx
+          conda install -n test -c ${{ matrix.channel }} -y cctbx numpy=1.19 scipy=1.9
 
       - name: Test environment info
         run: |
