--- a/.azure-pipelines/azure-pipelines-email-diff.yml
+++ b/.azure-pipelines/azure-pipelines-email-diff.yml
@@ -40,6 +40,7 @@ steps:
     cd $(Pipeline.Workspace)
     cd cctbx_project
     git remote add gitlab git@gitlab.com:cctbx/cctbx_project.git
+    git fetch gitlab
     git checkout -b gitlab_master gitlab/master
     git reset --hard origin/master
     git push -u gitlab gitlab_master
