CI: set email diff pipeline to batch
[skip ci]

--- a/.azure-pipelines/azure-pipelines-email-diff.yml
+++ b/.azure-pipelines/azure-pipelines-email-diff.yml
@@ -11,6 +11,7 @@ resources:
     name: cctbx/cctbx_project
     endpoint: cctbx
     trigger:
+      batch: true
       branches:
         include:
         - master
