--- a/.azure-pipelines/azure-pipelines-email-diff.yml
+++ b/.azure-pipelines/azure-pipelines-email-diff.yml
@@ -4,6 +4,14 @@
 trigger: none
 pr: none
 
+schedules:
+  - cron: '* /10 * * *'
+    displayName: Check for commits
+    branches:
+      include:
+      - master
+    always: true
+
 resources:
   repositories:
   - repository: cctbx_project
