CI: fix cron syntax and set to batch
[skip ci]

--- a/.azure-pipelines/azure-pipelines-email-diff.yml
+++ b/.azure-pipelines/azure-pipelines-email-diff.yml
@@ -5,12 +5,13 @@ trigger: none
 pr: none
 
 schedules:
-  - cron: '* /10 * * *'
+  - cron: '*/10 * * * *'
     displayName: Check for commits
     branches:
       include:
       - master
     always: true
+    batch: true
 
 resources:
   repositories:
