--- a/.github/workflows/nightly_tests.yml
+++ b/.github/workflows/nightly_tests.yml
@@ -20,9 +20,7 @@ jobs:
       matrix:
         channel: [conda-forge, cctbx-nightly]
         os: [ubuntu-latest, macos-15, macos-13, windows-latest]
-        python_version: [3.9, "3.10", 3.11, 3.12]
-        # os: [windows-latest]
-        # python_version: [3.9, 3.12]
+        python_version: [3.9, "3.10", 3.11, 3.12, 3.13]
 
     name: Testing (${{ matrix.channel }}, ${{ matrix.os }}, Python ${{ matrix.python_version }})
     runs-on: ${{ matrix.os }}
