--- a/.github/workflows/nightly_tests.yml
+++ b/.github/workflows/nightly_tests.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         channel: [conda-forge, cctbx-nightly]
-        os: [ubuntu-latest, macos-15, macos-13, windows-latest]
+        os: [ubuntu-latest, ubuntu-24.04-arm, macos-15, macos-13, windows-latest]
         python_version: [3.9, "3.10", 3.11, 3.12, 3.13]
 
     name: Testing (${{ matrix.channel }}, ${{ matrix.os }}, Python ${{ matrix.python_version }})
