Use ubuntu-22.04 to build source tarball
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 jobs:
 - job: Build_cctbx_source_tarball
   pool:
-    vmImage: ubuntu-latest
+    vmImage: ubuntu-22.04
   timeoutInMinutes: 120
 
   # variables for version
