--- a/wheel/pyproject.toml
+++ b/wheel/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 
 [project]
 name = "cctbx-base"
-version = "2025.4"
+version = "REPLACEME"
 dependencies = ["matplotlib", "numpy", "six"]
 license = "BSD-3-Clause-LBNL AND BSD-3-Clause AND BSL-1.0 AND LGPL-2.0-only AND LGPL-2.1-only AND LGPL-3.0-only AND MIT AND LGPL-2.0-or-later WITH WxWindows-exception-3.1"
 license-files = ["LICEN[CS]E*.txt"]
