--- a/.azure-pipelines/azure-pipelines-feedstock-update.yml
+++ b/.azure-pipelines/azure-pipelines-feedstock-update.yml
@@ -105,6 +105,7 @@ jobs:
 
       # skip Windows environment artifact storage
       sed -i "s/condition: not(eq(variables.ENV_ARTIFACT_PATH, ''))/condition: false/g" .azure-pipelines/azure-pipelines-win.yml
+      git commit -am "Skip Windows environment artifact"
 
       git remote set-url origin git@github.com:cctbx/nightly-feedstock.git
 
