--- a/.github/workflows/make_pip_package.yml
+++ b/.github/workflows/make_pip_package.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         channel: [cctbx-nightly]
-        os: [ubuntu-latest, macos-15, macos-13, windows-latest]
+        os: [ubuntu-latest, ubuntu-24.04-arm, macos-15, macos-13, windows-latest]
         python_version: [3.9, "3.10", 3.11, 3.12, 3.13]
 
     name: Converting (${{ matrix.channel }}, ${{ matrix.os }}, Python ${{ matrix.python_version }})
@@ -151,3 +151,43 @@ jobs:
           name: ${{ matrix.os }}_${{ matrix.python_version }}
           path: ./cctbx/wheel/fixed_wheels/cctbx?base*.whl
           overwrite: true
+
+  test_pip_packages:
+    needs: convert_conda_packages
+
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, ubuntu-24.04-arm, macos-15, macos-13, windows-latest]
+        python_version: [3.9, "3.10", 3.11, 3.12, 3.13]
+
+    name: Testing (${{ matrix.os }}, Python ${{ matrix.python_version }})
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python_version }}
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ matrix.os }}_${{ matrix.python_version }}
+
+      - name: Install pip package (Linux & macOS)
+        if: runner.os != 'Windows'
+        run: pip install cctbx*.whl
+
+      - name: Install pip package (Windows)
+        if: runner.os == 'Windows'
+        shell: cmd
+        run: |
+          for %%f in (".\cctbx*.whl") do (
+            pip install %%f
+          )
+
+      - name: Test (Linux & macOS)
+        if: runner.os != 'Windows'
+        run: libtbx.run_tests_parallel module=cctbx nproc=4
+
+      - name: Test (Windows)
+        if: runner.os == 'Windows'
+        run: python -c "from scitbx.array_family import flex; d = flex.random_double(500); print(flex.mean(d))"
